<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtNewUserName"
            android:hint="@string/user_name_signup"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true" />


        <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtNewUserPassword"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:met_baseColor="@color/colorPrimary"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorPrimary"
        app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtNewUserEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true" />

    </LinearLayout>


</android.support.v7.widget.CardView>